contrast fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -403,7 +403,7 @@ section div img {
 }
 section div h2 {
   font-size: 1rem;
-  background-color: #af4a43;
+  background-color: #8a3a35;
   color: rgb(255, 255, 255);
   margin: 0;
   padding: 1rem;
